# openai-bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  deploy.sh  destroy.sh  pyproject.toml
app/: app.py
app/.chalice/: config.template.json
app/chalicelib/: command_parser.py  openai_client.py  service.py  slack.py  util.py
app/chalicelib/slack/: __init__.py  command.py  matcher.py
app/lib/: openai_client.py
app/lib/slack/: __init__.py
backend/: pyproject.toml
backend/app/: app.py
backend/app/lib/: openai_client.py  service.py  util.py
backend/app/lib/slack/: __init__.py  command.py
backend/app/tests/: test_app.py
backend/scripts/: update_manifest.sh
copilot/: .workspace
copilot/backend/: manifest.template.yml
copilot/environments/dev/: manifest.template.yml
scheduler/: pyproject.toml
scheduler/app/: app.py
scheduler/app/.chalice/: config.template.json
scheduler/scripts/: deploy.sh  destroy.sh
scripts/: run_dev_server.sh
